# colinterp

./: Cargo.toml  README.md
.github/: README.md
src/: color.rs  lib.rs  main.rs
